--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -100,7 +100,7 @@
 
     <section>
         <nav class="navbar">
-            <a class="navbar-brand" href="#">Strategexs Group</a>
+            <a class="navbar-brand" href="#">Strategiecs Group</a>
             <ul class="navbar-menu">
                 <li><a href="/signin">sign in</a></li>
                 <li><a href="/signup">sign up</a></li>
@@ -109,8 +109,8 @@
     </section>
 
     <section class="sec_section">
-        <h1>Strategex</h1>
-        <p>bussniess peyond numbers</p>
+        <h1>Strategiecs</h1>
+        <p>Think Tank</p>
     </section>
 
 
