--- a/templates/authentication/signin.html
+++ b/templates/authentication/signin.html
@@ -92,7 +92,7 @@
     <div class="two-div">
         <div class="container">
             <h2>Login</h2>
-            <form action="/signin" method="post">
+            <form action="/userpage" method="post">
                 {% csrf_token %}
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" placeholder="Enter your username" required>
