--- a/templates/authentication/signin.html
+++ b/templates/authentication/signin.html
@@ -11,7 +11,7 @@
 	<style>
 		body {
 			font-family: Arial, sans-serif;
-			background: linear-gradient(to bottom, #DEEFE7, #159A9C);
+			background: linear-gradient(to bottom, #FC1414, #fdf9fb);
 		}
 
 		.container {
@@ -24,7 +24,7 @@
 		}
 
 		h2 {
-			color: #333;
+			color:#FC1414;
 			text-align: center;
 			margin-bottom: 30px;
 		}
@@ -47,7 +47,7 @@
 		input[type="submit"] {
 			display: inline-block;
 			padding: 10px 20px;
-			background-color: #333;
+			background-color:#FC1414;
 			color: #fff;
 			border: none;
 			border-radius: 5px;
@@ -57,14 +57,14 @@
 		}
 
 		input[type="submit"]:hover {
-			background-color: #555;
+			background-color: #FC1414;
 		}
 
 		.back-btn {
 			display: inline-block;
 			padding: 10px 20px;
-			background-color: #ccc;
-			color: #333;
+			background-color: #FC1414;
+			color: #fdf9fb;
 			border: none;
 			border-radius: 5px;
 			cursor: pointer;
@@ -74,16 +74,14 @@
 		}
 
 		.back-btn:hover {
-			background-color: #ddd;
+			background-color: #FC1414;
 		}
 
         .two-div {
             display: flex;
         }
 
-        .error{
-
-        }
+        
 
 	</style>
 </head>
