--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -16,7 +16,7 @@
     }
 
     body {
-        background-image: url("https://img.freepik.com/free-photo/business-partners-handshake-global-corporate-with-technology-concept_53876-102615.jpg?w=740&t=st=1678872293~exp=1678872893~hmac=b73c7a33d5bee5705822d6b56fc22f2322d5ebf99a0576a691f5b31936e39854");
+        background-image: url("https://lh3.googleusercontent.com/p/AF1QipM56OHmt7_7K503cT7DkO7rLBxbxjzSU5tAp85O=s1360-w1360-h1020");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
@@ -27,9 +27,16 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-color: #159A9C;
+        background-color:#FC1414;
         color: #fff;
-        padding: 10px;
+    }
+    .navbar a  {
+        width: 180px;
+        height: 70px;
+    }
+    .navbar a img {
+        width: 100%;
+        height: 70px;
     }
     
     .navbar-brand {
@@ -64,7 +71,7 @@
     }
     
     .navbar-menu li a:hover {
-        color: #002333;
+        color: #11050b;
     }
 
     .sec_section{
@@ -85,7 +92,7 @@
 
     .sec_section p{
         font-size: 32px;
-        color: #002333;
+        color: #FC1414;
         font-weight: bold;
     }
     
@@ -100,7 +107,7 @@
 
     <section>
         <nav class="navbar">
-            <a class="navbar-brand" href="#">Strategiecs Group</a>
+            <a class="navbar-brand" href="#"> <img src='https://lh3.googleusercontent.com/p/AF1QipM56OHmt7_7K503cT7DkO7rLBxbxjzSU5tAp85O=s1360-w1360-h1020' /> </a>
             <ul class="navbar-menu">
                 <li><a href="/signin">sign in</a></li>
                 <li><a href="/signup">sign up</a></li>
@@ -108,18 +115,9 @@
         </nav>
     </section>
 
-    <section class="sec_section">
-        <h1>Strategiecs</h1>
-        <p>Think Tank</p>
-    </section>
 
 
 
-
-    
-    
-    
-    
     
     
 </body>
